@@ -448,17 +448,18 @@ clearGeocodedInformation <- function(){
 
 failedGeocodeReturn <- function(output){
   if(output == "latlon"){
-    return(data.frame(lon = NA, lat = NA))
+    return(data.frame(lon = NA_real_, lat = NA_real_))
   } else if(output == "latlona"){
-    return(c(lon = NA, lat = NA, address = NA))
+    return(c(lon = NA_real_, lat = NA_real_, address = NA_character_))
   } else if(output == "more") {
     return(c(
-      lon = NA, lat = NA, type = NA, loctype = NA,
-      address = NA, north = NA, south = NA, east = NA, west = NA,
-      locality = NA, country = NA
+      lon = NA_real_, lat = NA_real_, type = NA_character_, loctype = NA_character_,
+      address = NA_character_,
+      north = NA_real_, south = NA_real_, east = NA_real_, west = NA_real_,
+      locality = NA_character_, country = NA_character_
     ))
   } else {
-    return(NA)
+    return(NA_real_)
   }
 }
 
